==> marcoveeneman/ChibiOS-Tiva/os/hal/ports/AVR/i2c_lld.c <==
#include "hal.h"
#define wakeup_isr(i2cp, msg) {                                             \
  osalSysLockFromISR();                                                     \
  if ((i2cp)->thread != NULL) {                                             \
    thread_t *tp = (i2cp)->thread;                                          \
    (i2cp)->thread = NULL;                                                  \
    tp->p_u.rdymsg = (msg);                                                 \
    chSchReadyI(tp);                                                        \
  }                                                                         \
  osalSysUnlockFromISR();                                                   \
}

void i2c_lld_start(I2CDriver *i2cp) {

  /* TODO: Test TWI without external pull-ups (use internal) */

  /* Configure prescaler to 1 */
  TWSR &= 0xF8;

  /* Configure baudrate */
  TWBR = ((F_CPU / i2cp->config->clock_speed) - 16) / 2;
}

void i2c_lld_stop(I2CDriver *i2cp) {

  if (i2cp->state != I2C_STOP) {
    /* Disable TWI subsystem and stop all operations */
    TWCR &= ~(1 << TWEN);
  }
}

msg_t i2c_lld_master_receive_timeout(I2CDriver *i2cp, i2caddr_t addr,
                                     uint8_t *rxbuf, size_t rxbytes,
                                     systime_t timeout) {
  i2cp->addr = addr;
  i2cp->txbuf = NULL;
  i2cp->txbytes = 0;
  i2cp->txidx = 0;
  i2cp->rxbuf = rxbuf;
  i2cp->rxbytes = rxbytes;
  i2cp->rxidx = 0;

  /* Send START */
  TWCR = ((1 << TWSTA) | (1 << TWINT) | (1 << TWEN) | (1 << TWIE));

  osalSysLock();
  i2cp->thread = chThdGetSelfX();
  chSchGoSleepS(THD_STATE_SUSPENDED);
  chSysUnlock();

  return chThdGetSelfX()->p_u.rdymsg;
}

msg_t i2c_lld_master_transmit_timeout(I2CDriver *i2cp, i2caddr_t addr,
                                      const uint8_t *txbuf, size_t txbytes,
                                      uint8_t *rxbuf, size_t rxbytes,
                                      systime_t timeout) {
  i2cp->addr = addr;
  i2cp->txbuf = txbuf;
  i2cp->txbytes = txbytes;
  i2cp->txidx = 0;
  i2cp->rxbuf = rxbuf;
  i2cp->rxbytes = rxbytes;
  i2cp->rxidx = 0;

  TWCR = ((1 << TWSTA) | (1 << TWINT) | (1 << TWEN) | (1 << TWIE));

  chSysLock();
  i2cp->thread = chThdGetSelfX();
  chSchGoSleepS(THD_STATE_SUSPENDED);
  chSysUnlock();

  return chThdGetSelfX()->p_u.rdymsg;
}
